objects/SCP_Certa_GC__Update_Service_batch__c.object
<CustomObject>
    <fields>
        <fullName>SCP_Certa_GC__Fecha_Alta__c</fullName>
        <label>Fecha Alta</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SCP_Certa_GC__Fecha_Baja__c</fullName>
        <label>Fecha Baja</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SCP_Certa_GC__Name__c</fullName>
        <label>Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SCP_Certa_GC__categoria__c</fullName>
        <label>categoria</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SCP_Certa_GC__idDelta__c</fullName>
        <label>idDelta</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Update Service batch</label>
    <nameField>
        <label>Nombre de Update Service batch</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Update Service batch</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>